Formatted and added main + footer

--- a/test.html
+++ b/test.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
 
-  </head>
-  <body>
-    Hello World
-  </body>
+<head>
+
+</head>
+
+<body>
+  <main>
+    <h1>
+      Hello World
+    </h1>
+  </main>
+  <footer>
+    <h2>Vincent Shury</h2>
+  </footer>
+</body>
+
 </html>
