added some names and stuff

--- a/test.html
+++ b/test.html
@@ -9,11 +9,11 @@
 <body>
   <main>
     <h1>
-      Hello World
+      Hello World, my name is max.
     </h1>
   </main>
   <footer>
-    <h2>Vincent Shury</h2>
+    <h2>Vincent Shury is my TA.</h2>
   </footer>
 </body>
 
